deleted non beta stuff

--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
 
 <body>
 	<div id="wrapper" style="vertical-align:center">
-		<div id="header"><img id="logo" src="brand/logo.png" class="left"></div>
+		<div id="header"><img id="logo" src="brand/salusmea-logo3.png" class="left"></div>
 	
 		<div class="LoginContent">
 					<form id="loginForm" name="loginForm" action="javascript:checkLoginCreds('');" method="post">
