Update/toolttips-icons-span-text

--- a/alarm.html
+++ b/alarm.html
@@ -79,7 +79,7 @@
                                 ><img
                                     src="images/portalHeader/alerts.png"
                                 /><span class="toolTipText"
-                                    >Hantering av larm</span
+                                    >Aktiva larm</span
                                 >
                                 <p>Larm</p></a
                             >
@@ -89,7 +89,7 @@
                                 ><img
                                     src="images/portalHeader/users.png"
                                 /><span class="toolTipText"
-                                    >All användarinformation</span
+                                    >Lägg till och ändra användare</span
                                 >
                                 <p>Användare</p></a
                             >
@@ -99,7 +99,7 @@
                                 ><img
                                     src="images/portalHeader/contacts.png"
                                 /><span class="toolTipText"
-                                    >Spara och radera användare</span
+                                    >Lägg till och ändra larmmottagare</span
                                 >
                                 <p>Kontakter</p></a
                             >
@@ -109,7 +109,7 @@
                                 ><img
                                     src="images/portalHeader/places.png"
                                 /><span class="toolTipText"
-                                    >Hantering av positionering</span
+                                    >Lägg till och ändra inomhuspositionering</span
                                 >
                                 <p>Platser</p></a
                             >
@@ -119,7 +119,7 @@
                                 ><img
                                     src="images/portalHeader/archive.png"
                                 /><span class="toolTipText"
-                                    >Arkiv över alla larm</span
+                                    >Sök i larmhistorik</span
                                 >
                                 <p>Arkiv</p></a
                             >
@@ -128,7 +128,7 @@
                             <a href="manual.html" class="imageLink"
                                 ><img src="images/portalHeader/help.png" /><span
                                     class="toolTipText"
-                                    >Information och support för sidan</span
+                                    >Information om hur du använder larmportalen</span
                                 >
                                 <p>Guide</p></a
                             >
