--- a/archive.html
+++ b/archive.html
@@ -27,7 +27,7 @@
                             <a href="alarm.html" class="imageLink"
                                 ><img src="images/portalHeader/alerts.png" />
                                 <span class="toolTipText"
-                                    >Hantering av larm</span
+                                    >Aktiva larm</span
                                 >
                                 <p>Larm</p>
                             </a>
@@ -37,7 +37,7 @@
                                 ><img
                                     src="images/portalHeader/users.png"
                                 /><span class="toolTipText"
-                                    >All användarinformation</span
+                                    >Lägg till och ändra användare</span
                                 >
                                 <p>Användare</p></a
                             >
@@ -47,7 +47,7 @@
                                 ><img
                                     src="images/portalHeader/contacts.png"
                                 /><span class="toolTipText"
-                                    >Spara och radera användare</span
+                                    >Lägg till och ändra larmmottagare</span
                                 >
                                 <p>Kontakter</p></a
                             >
@@ -57,7 +57,7 @@
                                 ><img
                                     src="images/portalHeader/places.png"
                                 /><span class="toolTipText"
-                                    >Hantering av positionering</span
+                                    >Lägg till och ändra inomhuspositionering</span
                                 >
                                 <p>Platser</p></a
                             >
@@ -67,7 +67,7 @@
                                 ><img
                                     src="images/portalHeader/archive.png"
                                 /><span class="toolTipText">
-                                    Arkiv över alla larm</span
+                                    Sök i larmhistorik</span
                                 >
                                 <p>Arkiv</p></a
                             >
@@ -76,7 +76,7 @@
                             <a href="manual.html" class="imageLink"
                                 ><img src="images/portalHeader/help.png" /><span
                                     class="toolTipText"
-                                    >Information och support för sidan</span
+                                    >Information om hur du använder larmportalen</span
                                 >
                                 <p>Guide</p></a
                             >
@@ -158,6 +158,16 @@
                             <tr>
                                 <td>2020-01-01 23:00</td>
                                 <td>Lina</td>
+                                <td>SMUU5769</td>
+                                <td>+46703120666</td>
+                                <td>Grusvägen 1</td>
+                                <td>Rörelselarm</td>
+                                <td>Salus Mea</td>
+                            </tr>
+                            
+                            <tr>
+                                <td>2020-01-01 23:00</td>
+                                <td>Anton</td>
                                 <td>SMUU5769</td>
                                 <td>+46703120666</td>
                                 <td>Grusvägen 1</td>
