--- a/manual.html
+++ b/manual.html
@@ -55,7 +55,7 @@
                             <a href="alarm.html" class="imageLink"
                                 ><img src="images/portalHeader/alerts.png" />
                                 <span class="toolTipText" style="font-weight: normal; color: white;"
-                                    >Hantering av larm</span
+                                    >Aktiva larm</span
                                 >
                                 <p style="font-weight: normal; color: white;">Larm</p>
                             </a>
@@ -65,7 +65,7 @@
                                 ><img
                                     src="images/portalHeader/users.png"
                                 /><span class="toolTipText" style="font-weight: normal; color: white;"
-                                    >All användarinformation</span
+                                    >Lägg till och ändra användare</span
                                 >
                                 <p style="font-weight: normal; color: white;">Användare</p></a
                             >
@@ -75,7 +75,7 @@
                                 ><img
                                     src="images/portalHeader/contacts.png"
                                 /><span class="toolTipText" style="font-weight: normal; color: white;"
-                                    >Spara och radera användare</span
+                                    >Lägg till och ändra larmmottagare</span
                                 >
                                 <p style="font-weight: normal; color: white;">Kontakter</p></a
                             >
@@ -85,7 +85,7 @@
                                 ><img
                                     src="images/portalHeader/places.png"
                                 /><span class="toolTipText" style="font-weight: normal; color: white;"
-                                    >Hantering av positionering</span
+                                    >Lägg till och ändra inomhuspositionering</span
                                 >
                                 <p style="font-weight: normal; color: white;">Platser</p></a
                             >
@@ -95,7 +95,7 @@
                                 ><img
                                     src="images/portalHeader/archive.png"
                                 /><span class="toolTipText" style="font-weight: normal; color: white;">
-                                    Arkiv över alla larm</span
+                                    Sök i larmhistorik</span
                                 >
                                 <p style="font-weight: normal; color: white;">Arkiv</p></a
                             >
@@ -104,7 +104,7 @@
                             <a href="manual.html" class="imageLink"
                                 ><img src="images/portalHeader/help.png" /><span
                                     class="toolTipText" style="font-weight: normal; color: white;"
-                                    >Information och support för sidan</span
+                                    >Information om hur du använder larmportalen</span
                                 >
                                 <p style="font-weight: normal; color: white;">Guide</p></a
                             >
