--- a/wlan.html
+++ b/wlan.html
@@ -83,7 +83,7 @@
                                 ><img
                                     src="images/portalHeader/alerts.png"
                                 /><span class="toolTipText"
-                                    >Hantering av larm</span
+                                    >Aktiva larm</span
                                 >
                                 <p>Larm</p></a
                             >
@@ -93,7 +93,7 @@
                                 ><img
                                     src="images/portalHeader/users.png"
                                 /><span class="toolTipText"
-                                    >All användarinformation</span
+                                    >Lägg till och ändra användare</span
                                 >
                                 <p>Användare</p></a
                             >
@@ -103,7 +103,7 @@
                                 ><img
                                     src="images/portalHeader/contacts.png"
                                 /><span class="toolTipText"
-                                    >Spara och radera användare</span
+                                    >Lägg till och ändra larmmottagare</span
                                 >
                                 <p>Kontakter</p></a
                             >
@@ -113,7 +113,7 @@
                                 ><img
                                     src="images/portalHeader/places.png"
                                 /><span class="toolTipText"
-                                    >Hantering av positionering</span
+                                    >Lägg till och ändra inomhuspositionering</span
                                 >
                                 <p>Platser</p></a
                             >
@@ -123,7 +123,7 @@
                                 ><img
                                     src="images/portalHeader/archive.png"
                                 /><span class="toolTipText"
-                                    >Arkiv över alla larm</span
+                                    >Sök i larmhistorik</span
                                 >
                                 <p>Arkiv</p></a
                             >
@@ -132,7 +132,7 @@
                             <a href="manual.html" class="imageLink"
                                 ><img src="images/portalHeader/help.png" /><span
                                     class="toolTipText"
-                                    >Information och support för sidan</span
+                                    >Information om hur du använder larmportalen</span
                                 >
                                 <p>Guide</p></a
                             >
@@ -190,8 +190,10 @@
                                                     <img
                                                         src="images/mapW.png"
                                                         alt="show map"
+                                                        style="height: 40px;"
                                                     />
                                                 </a>
+                                                <span style="color: whitesmoke; display: block;">Karta</span>
                                             </div>
                                         </td>
                                         <!-- The Modal -->
@@ -256,8 +258,10 @@
                                                     <img
                                                         src="images/save.png"
                                                         alt="save"
+                                                        style="height: 40px;"
                                                     />
                                                 </a>
+                                                <span style="color: whitesmoke; display: block;">Spara</span>
                                             </div>
                                         </td>
                                         <td rowspan="5" class="rowbtn">
@@ -268,8 +272,10 @@
                                                     <img
                                                         src="images/delete.png"
                                                         alt="save icon"
+                                                        style="height: 40px;"
                                                     />
                                                 </a>
+                                                <span style="color: whitesmoke; display: block;">Radera</span>
                                             </div>
                                         </td>
                                     </tr>
@@ -370,8 +376,10 @@
                                                     <img
                                                         src="images/mapW.png"
                                                         alt="show map"
+                                                        style="height: 40px;"
                                                     />
                                                 </a>
+                                                <span style="color: whitesmoke; display: block;">Karta</span>
                                             </div>
                                         </td>
                                         <!-- The Modal -->
@@ -436,8 +444,10 @@
                                                     <img
                                                         src="images/save.png"
                                                         alt="save"
+                                                        style="height: 40px;"
                                                     />
                                                 </a>
+                                                <span style="color: whitesmoke; display: block;">Spara</span>
                                             </div>
                                         </td>
                                         <td rowspan="5" class="rowbtn">
@@ -448,8 +458,10 @@
                                                     <img
                                                         src="images/delete.png"
                                                         alt="save icon"
+                                                        style="height: 40px;"
                                                     />
                                                 </a>
+                                                <span style="color: whitesmoke; display: block;">Radera</span>
                                             </div>
                                         </td>
                                     </tr>
