minor style changes

--- a/archive.html
+++ b/archive.html
@@ -26,9 +26,7 @@
                         <li class="toolTip">
                             <a href="alarm.html" class="imageLink"
                                 ><img src="images/portalHeader/alerts.png" />
-                                <span class="toolTipText"
-                                    >Aktiva larm</span
-                                >
+                                <span class="toolTipText">Aktiva larm</span>
                                 <p>Larm</p>
                             </a>
                         </li>
@@ -57,7 +55,8 @@
                                 ><img
                                     src="images/portalHeader/places.png"
                                 /><span class="toolTipText"
-                                    >Lägg till och ändra inomhuspositionering</span
+                                    >Lägg till och ändra
+                                    inomhuspositionering</span
                                 >
                                 <p>Platser</p></a
                             >
@@ -76,7 +75,8 @@
                             <a href="manual.html" class="imageLink"
                                 ><img src="images/portalHeader/help.png" /><span
                                     class="toolTipText"
-                                    >Information om hur du använder larmportalen</span
+                                    >Information om hur du använder
+                                    larmportalen</span
                                 >
                                 <p>Guide</p></a
                             >
@@ -157,20 +157,10 @@
                             </tr>
                             <tr>
                                 <td>2020-01-01 23:00</td>
-                                <td>Lina</td>
-                                <td>SMUU5769</td>
-                                <td>+46703120666</td>
-                                <td>Grusvägen 1</td>
-                                <td>Rörelselarm</td>
-                                <td>Salus Mea</td>
-                            </tr>
-                            
-                            <tr>
-                                <td>2020-01-01 23:00</td>
                                 <td>Anton</td>
                                 <td>SMUU5769</td>
-                                <td>+46703120666</td>
-                                <td>Grusvägen 1</td>
+                                <td>+46701234567</td>
+                                <td>Göteborgsvägen 1</td>
                                 <td>Rörelselarm</td>
                                 <td>Salus Mea</td>
                             </tr>
