minor-change/span change to radera

--- a/user.html
+++ b/user.html
@@ -720,7 +720,7 @@
                                                     style="height: 50px;"
                                                 />
                                             </a>
-                                            <span style="color: whitesmoke; display: block; text-align: center;">Spara</span>
+                                            <span style="color: whitesmoke; display: block; text-align: center;">Radera</span>
                                         </div>
                                     </td>
                                 </tr>
